# x-git-hooks

./: Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: config.rs  fs.rs  git.rs  hooks.rs  main.rs  shell.rs
src/scripts/: multi-mode-runner  multi-mode-sample-script  single-mode-runner
