[package]
name = "git-hooks"
version = "0.0.0"
authors = ["MunifTanjim"]
edition = "2018"
description = "Git Hooks Handler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = { version = "0.3", default-features = false }
