[package]
name = "x-git-hooks"
version = "0.0.0"
authors = ["MunifTanjim"]
edition = "2018"
description = "Git Hooks Handler"

[[bin]]
name = "git-hooks"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = { version = "0.3", default-features = false }
