[package]
name = "x-git-hooks"
version = "0.0.1"
authors = ["MunifTanjim"]
edition = "2018"
description = "Git Hooks Manager"
readme = "README.md"
homepage = "https://github.com/MunifTanjim/x-git-hooks#readme"
repository = "https://github.com/MunifTanjim/x-git-hooks"
license = "MIT"
keywords = ["git", "git-hooks", "hooks"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github"]

[[bin]]
name = "git-hooks"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = { version = "0.3", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
